# findshlibs

./: .travis.yml  Cargo.toml  README.md  build.rs  regen_linux_bindings.sh  regen_macos_bindings.sh
.github/workflows/: main.yml
ci/: before_install.sh  script.sh
examples/: list_eh_frame.rs  list_segments.rs
src/: android-api.c  lib.rs  shared_lib.rs  unsupported.rs
src/linux/: bindings.h  bindings.rs  mod.rs
src/macos/: bindings.h  bindings.rs  mod.rs
src/windows/: mod.rs
