[package]
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
description = "Find the set of shared libraries loaded in the current process with a cross platform API"
documentation = "https://docs.rs/findshlibs"
keywords = ["dyld", "dylib", "shared", "library", "dl_iterate_phdr"]
license = "MIT OR Apache-2.0"
name = "findshlibs"
readme = "./README.md"
repository = "https://github.com/gimli-rs/findshlibs"
version = "0.8.0"
edition = "2018"

[dependencies]
libc = "0.2.65"

[target.'cfg(target_os = "macos")'.dependencies]
lazy_static = "1.4"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["psapi", "memoryapi", "libloaderapi", "processthreadsapi"] }
